# lab06

./: .travis.yml  CMakeLists.txt  README.md
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: activate
tests/: test1.cpp
